# autodev

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  apply_code_functions.ipynb  environment.yml  pyproject.toml  run_qa_fireface_manual.py  run_qa_sensai.py  run_service.py
autodev/: .gitignore  README.md  apply_code_functions.ipynb  benchmark_completion_models.ipynb  environment.yml  index_source_code.py  jupyter.sh  pyproject.toml  run_completion_model_comparison.py  run_completion_model_comparison_report.py  run_completion_model_finetuning.py  run_completion_model_perplexity_evaluation.py  run_onnx_conversion.py  run_onnx_quantization.py  run_qa_fireface_manual.py  run_qa_sensai.py  run_service.py
autodev/data/: .gitignore
autodev/data/completion-tasks/c-sharp/: circle_area.cs  linq_missing_function.cs  linq_missing_function_body.cs  linq_missing_functions.cs  nolinq_missing_function_body.cs
autodev/data/completion-tasks/csharp/: circle_area.cs
autodev/data/completion-tasks/python/: add.py  segmentation.py
autodev/data/completion-tasks/ruby/: customers_filter.rb  greeter_class_bye.rb  greeter_class_multi_foreach.rb  greeter_class_multi_join.rb
autodev/data/completion-tasks/rust/: FULL_CODE.rs  missing_combine_const_generic.rs  missing_combine_signature.rs  missing_derive.rs  missing_mul_associated_type.rs  missing_mul_impl.rs  missing_mul_signature.rs  missing_vec.rs  vec_missing_type.rs
autodev/src/autodev/: __init__.py  llm.py  service.py  stream_formatting.py
autodev/tests/test_autodev/: test_indexing.py  test_splitting.py
(+108 files in other folders)
